# content-optimization

./: .gitignore  CLAUDE.md  Dockerfile  README.md  RESEARCH_FINDINGS.md  active_context.md  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analyze.py  health.py  optimize.py  url.py
backend/app/core/: config.py
backend/tests/: conftest.py
backend/tests/api/: test_analyze.py  test_health.py  test_optimize.py
config/: default_config.yaml
docs/archive/: 00-research-plan.md  01-content-ingestion.md  02-keyword-strategy.md  02a-keyword-implementation.md  02b-keyword-reference.md  03-onpage-seo-framework.md  04-entity-seo.md  05-ai-content-extraction.md  06-scoring-systems.md  06a-scoring-ai-readiness.md  06b-scoring-visualization.md  07-guardrails.md  08-architecture-synthesis.md
docs/research/: 00-system-overview.md  01-docx-parsing.md  02-keyword-optimization.md  03-business-context.md  04-faq-generation.md  05-diffing-highlighting.md  06-docx-output.md  07-guardrails.md
docs/specs/: implementation-priority.md
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
src/seo_optimizer/: __init__.py
src/seo_optimizer/analysis/: __init__.py  ai_scorer.py  analyzer.py  entity_extractor.py  gap_detector.py  issue_detector.py  keyword_mapper.py  models.py  readability_scorer.py  recommendation_engine.py  semantic_scorer.py  seo_scorer.py
src/seo_optimizer/context/: __init__.py  brand_loader.py  business_context.py
src/seo_optimizer/diffing/: __init__.py  chunker.py  differ.py  fingerprint.py  models.py  semantic.py
src/seo_optimizer/generation/: __init__.py  content_enhancer.py  faq_generator.py
src/seo_optimizer/guardrails/: __init__.py  safety_checks.py  validators.py
src/seo_optimizer/ingestion/: __init__.py  docx_parser.py  firecrawl_client.py  markdown_parser.py  models.py
src/seo_optimizer/optimization/: __init__.py  content_optimizer.py  content_zones.py  entity_enricher.py  faq_generator.py  guardrails.py  heading_optimizer.py  keyword_injector.py  meta_generator.py  models.py  pipeline.py  readability_improver.py  redundancy_resolver.py
src/seo_optimizer/output/: __init__.py  docx_writer.py  highlighter.py  markdown_writer.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep
tests/optimization/: __init__.py  conftest.py  test_body_optimization_fix.py  test_content_optimizer.py  test_entity_enricher.py  test_faq_architecture.py  test_faq_generator.py  test_guardrails.py  test_heading_optimizer.py  test_keyword_injector.py  test_meta_generator.py  test_models.py  test_pipeline.py  test_readability_improver.py  test_redundancy_resolver.py
tests/test_analysis/: __init__.py  test_ai_scorer.py  test_analyzer.py  test_entity_extractor.py  test_issue_detector.py  test_models.py  test_readability_scorer.py  test_recommendation_engine.py  test_seo_scorer.py
tests/test_diffing/: __init__.py  test_chunker.py  test_differ.py  test_edge_cases.py  test_fingerprint.py  test_semantic.py
tests/test_ingestion/: test_docx_parser.py
tests/test_integration/: __init__.py
tests/test_output/: __init__.py  test_docx_writer.py  test_highlighter.py
